--- a/k2kj/build.gradle
+++ b/k2kj/build.gradle
@@ -1,4 +1,7 @@
 
+
+version = '0.5.0'
+
 apply plugin: 'java'
 
 repositories {
@@ -17,10 +20,34 @@ eclipseJdt << {
 
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.18'
+    compile 'org.slf4j:slf4j-log4j12:1.7.21'
     compile 'log4j:log4j:1.2.14'
-    compile 'commons-cli:commons-cli:1.3.1'
     compile 'org.apache.kafka:kafka-clients:0.9.0.1'
+    compile 'net.sf.jopt-simple:jopt-simple:5.0.1'
     testCompile 'junit:junit:4.12'
 }
 
+
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+	manifest {
+        attributes 'Implementation-Title': 'k2kj', 
+        	'Implementation-Version': version,
+        	'Main-Class': 'com.kappaware.k2kj.Main'
+    }
+    baseName = project.name
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+
+// To launch as: ./run.sh main arg1 arg2 ..
+task run_main(type: JavaExec) {
+	dependsOn classes
+	description = "Main Command launcher"
+	main = "com.kappaware.k2kj.Main"
+	classpath sourceSets.main.runtimeClasspath
+	if ( project.hasProperty("runArgs") ) {
+		args Eval.me(runArgs)	
+	}
+}
