Kgen: Admin web implementation. Work in progress

--- a/kgen/build.gradle
+++ b/kgen/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.fasterxml.jackson.jr:jackson-jr-objects:2.7.3'
     compile 'org.apache.kafka:kafka-clients:0.9.0.1'
     compile 'net.sf.jopt-simple:jopt-simple:5.0.1'
+    compile 'org.eclipse.jetty:jetty-server:9.3.8.v20160314'
     testCompile 'junit:junit:4.12'
 }
 
