--- a/kcons/build.gradle
+++ b/kcons/build.gradle
@@ -21,8 +21,8 @@ dependencies {
  	compile 'org.slf4j:slf4j-log4j12:1.7.21'
     compile 'log4j:log4j:1.2.14'
     compile 'net.sf.jopt-simple:jopt-simple:5.0.1'
-    compile 'jline:jline:2.14.1'
     compile project(':kcommon')
+    testCompile 'junit:junit:4.12'
 }
 
 
