--- a/king/build.gradle
+++ b/king/build.gradle
@@ -17,17 +17,16 @@
 defaultTasks 'fatJar'
 
 dependencies {
-	compile 'org.slf4j:slf4j-log4j12:1.7.21'
-    compile 'log4j:log4j:1.2.14'
-    compile 'net.sf.jopt-simple:jopt-simple:5.0.1'
-    compile 'org.eclipse.jetty:jetty-servlet:9.3.8.v20160314'
+	compile "org.slf4j:slf4j-log4j12:$sl4jLog4jVersion"
+    compile "log4j:log4j:$log4jVersion"
+    compile "net.sf.jopt-simple:jopt-simple:$joptVersion"
+    compile "org.eclipse.jetty:jetty-servlet:$jettyVersion"
     compile project(':kcommon')
-    testCompile 'junit:junit:4.12'
-    testCompile 'info.batey.kafka:kafka-unit:0.4'
-    testCompile 'org.eclipse.jetty:jetty-client:9.3.8.v20160314'
+    testCompile "junit:junit:$junitVersion"
+    testCompile "info.batey.kafka:kafka-unit:$kafkaUnitVersion"
+    testCompile "org.eclipse.jetty:jetty-client:$jettyVersion"
     
 }
-
 
 jar {
 	exclude("log4j.xml")
