--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 
 
-version = 0.6.2-SNAPSHOT
-versionForRpm = 0.6.2
+version = 0.6.3-SNAPSHOT
+versionForRpm = 0.6.3
 
 
 // Dependencies versions
@@ -17,4 +17,5 @@ kafkaClientVersion=0.9.0.1
 jacksonJrVersion=2.7.3
 c3p0version=0.9.5.2
 postgresqlJdbcVersion=9.4.1208
+cassandraDriverVersion=3.0.2
 
