--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 
 
-version = 0.6.3-SNAPSHOT
-versionForRpm = 0.6.3
+version = 0.6.4-SNAPSHOT
+versionForRpm = 0.6.4
 
 
 // Dependencies versions
@@ -13,7 +13,8 @@ jettyVersion=9.3.8.v20160314
 joptVersion=5.0.1
 junitVersion=4.12
 kafkaUnitVersion=0.4
-kafkaClientVersion=0.9.0.1
+kafkaClientVersion=0.10.0.0
+//kafkaClientVersion=0.9.0.1
 jacksonJrVersion=2.7.3
 c3p0version=0.9.5.2
 postgresqlJdbcVersion=9.4.1208
